--- a/todo
+++ b/todo
@@ -519,14 +519,21 @@ playback
 1. remove selection column, instead ctrl+click does it
 2. ctrl+shift+V to paste at end of selection
 
+1/16
+1. unit view, individuals
+
+1/17
+unit view:
+  1. highlight unit bullets that are selected
+  2. draw text labels for unit bullets
+  3. highlight pinned row on left unit hover
+  4. highlight left unit on pinned row hover
+  5. update icon to pin icon
+
 Todo by priority
 ----------------
- - Unit view, at least for drums
-   - how many views do you want? the fewer, the easier it is to be 'present'
-     with others.
-   - something like ptweb
-     - can pin instruments to be drums. (list of pinned is global)
- - 
+ - colour legend on left menu
+
  - webpage with all keybindings
 
  - test to see if the midi noodling is causing the lag. delete voice previews if so
