--- a/todo
+++ b/todo
@@ -535,9 +535,11 @@ unit view:
 
 Todo by priority
 ----------------
- - colour legend on left menu
-
- - webpage with all keybindings
+ - update gh-pages
+   - update beat-fit meaning
+   - page w all keybindings
+   - update how to copy / paste
+   - update legend on unit tab
 
  - test to see if the midi noodling is causing the lag. delete voice previews if so
  - way to elongate notes (ctrl click in unit row)
