left measure view

--- a/todo
+++ b/todo
@@ -541,8 +541,10 @@ Todo by priority
    - update how to copy / paste
    - update legend on unit tab
 
- - ctrl click in the unit area to select
  - left piano proper
+   - make it clickable for note preview
+   - add upper area display
+
  - move voices
  - drag voices / units
  - test to see if the midi noodling is causing the lag. delete voice previews if so
